menu overflow issue on small devices has been fixed

--- a/test/styles.css
+++ b/test/styles.css
@@ -1,21 +1,21 @@
 .label {
   font-family: var(--font, "Source Code Pro"), monospace !important;
 }
-#menu.dark {
+#menu.dark, #overflowedMenu.dark {
   background: #232323;
   color: white;
 }
-#menu {
+#menu, #overflowedMenu {
   background: #bcbcbc;
 }
-#menu p, #menu span, #menu button, #menu a {
+#menu p, #menu span, #menu button, #menu a, #overflowedMenu p, #overflowedMenu span, #overflowedMenu button, #overflowedMenu a {
   -webkit-transition: color .5s ease-out;
   -moz-transition: color .5s ease-out;
   -o-transition: color .5s ease-out;
   transition: color .5s ease-out;
   color: black;
 }
-#menu.dark p, #menu.dark span, #menu.dark button {
+#menu.dark p, #menu.dark span, #menu.dark button, #overflowedMenu.dark p, #overflowedMenu.dark span, #overflowedMenu.dark button {
   color: white;
 }
 .editor {
@@ -221,7 +221,7 @@ span[action=openCommandPallete] {
 .ace_autocomplete .ace_mobile-menu {
   display: none;
 }
-#menu {
+#menu, #overflowedMenu {
   font-family: var(--font, "Source Code Pro"), monospace !important;
 }
 .buttom_sheet {
@@ -386,7 +386,7 @@ div.child p {
   color: black;
   text-decoration: none;
 }
-#menu a {
+#menu a, #overflowedMenu a {
   color: inherit;
   text-decoration: none;
 }
@@ -565,7 +565,7 @@ body.dark {
   width: 100%;
   z-index: 98;
 }
-#menu img {
+#menu img, #overflowedMenu img {
   margin-top: 5px;
   height: 25px;
   margin-bottom: -3px;
